<resources>
    <string name="app_name">Fit-a-Pet</string>

    <!-- loginForm -->
    <string name="Login">로그인</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="loginBtn">로그인하기</string>
    <string name="searchUser">
        <u>아이디/비밀번호 찾기</u>
    </string>
    <string name="createUserText1">계정이 없으신가요?</string>
    <string name="createUserText2">
        <u>계정 만들기</u>
    </string>

    <!-- registerForm -->
    <string name="nickname">닉네임</string>
    <string name="email">이메일</string>
    <string name="emailText">이메일을 입력해주세요.</string>
    <string name="phone">휴대폰 번호</string>
    <string name="idText">사용할 아이디를 입력해주세요.</string>
    <string name="pwdText">영문, 숫자 조합 8자리 이상</string>
    <string name="check_pwd">비밀번호 확인</string>
    <string name="nicknameText">닉네임을 입력해주세요.</string>
    <string name="register">회원가입</string>
    <string name="duplicate">중복확인</string>
    <string name="hyphen">-</string>

    <string name="valid_id">사용 가능한 아이디입니다.</string>
    <string name="invalid_id">이미 사용중인 아이디입니다.</string>
    <string name="valid_email">사용 가능한 이메일입니다.</string>
    <string name="invalid_email">이미 사용중인 이메일입니다.</string>
    <string name="valid_pwd">패스워드가 일치합니다.</string>
    <string name="invalid_pwd">패스워드가 일치하지 않습니다.</string>

    <!-- main -->
    <string name="schedule_list">모든 스케쥴</string>
    <string name="schedule_content">등록된 반려동물이 없어\n 예정된 스케줄을 조회할 수 없어요</string>
    <string name="pet_list">나의 반려동물 리스트</string>
    <string name="btn_new_pet_text">새로운 반려동물 추가하기</string>
    <string name="empty_pet">아직 등록된 반려동물이 없어요...</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login2">LoginActivity2</string>

    <!--  -->
    <string name="empty"></string>

</resources>