<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:minHeight="700dp">
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:background="#F5F5F5"
        tools:context=".view.auth.LoginActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/act_main_scroll"
            app:layout_constraintTop_toTopOf="parent">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical" >
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical"
                          app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                          android:id="@+id/act_login" app:layout_constraintTop_toTopOf="parent"
                          android:layout_marginTop="180dp">
                <TextView
                        android:text="@string/Login"
                        android:layout_width="78dp"
                        android:layout_height="29dp" android:id="@+id/loginText"
                        android:textSize="21sp" android:textAlignment="center"
                        android:textColor="@color/black" android:fontFamily="sans-serif-black" android:textStyle="bold"
                        android:layout_gravity="center"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:inputType="textPersonName"
                        android:text="@string/id"
                        android:ems="10"
                        android:id="@+id/edt_id"
                        android:textSize="12sp" android:background="@drawable/edit_text_round"
                        android:layout_marginTop="30dp"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/edt_pwd"
                        android:text="@string/password"
                        android:textSize="12sp"
                        android:background="@drawable/edit_text_round"
                        android:layout_marginTop="15dp"/>
                <Button
                        android:text="@string/loginBtn"
                        android:layout_width="match_parent"
                        android:layout_height="55dp" android:id="@+id/loginBtn"
                        android:background="@drawable/btn_round"
                        android:textColor="@color/white"
                        android:layout_marginTop="35dp"/>
                <TextView
                        android:text="@string/searchUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/searchUser"
                        android:layout_marginTop="8dp"
                        android:textSize="13sp" android:textColor="#a6a6a6"
                        android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="24dp"
                          app:layout_constraintTop_toBottomOf="@+id/act_login"
                          app:layout_constraintStart_toStartOf="@+id/act_login"
                          app:layout_constraintEnd_toEndOf="@+id/act_login"
                          app:layout_constraintHorizontal_bias="0.0"
                          android:layout_marginTop="100dp">
                <TextView
                        android:text="@string/createUserText1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView2"
                        android:textColor="#000000" android:layout_gravity="center"
                        android:paddingStart="70dp"/>
                <TextView
                        android:text="@string/createUserText2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView3"
                        android:textColor="#faa800" android:layout_gravity="center"
                        android:paddingLeft="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>