<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/view_scroll"
            app:layout_constraintTop_toTopOf="parent">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                         android:orientation="horizontal" android:layout_marginStart="25dp"
                         android:layout_marginEnd="25dp"
                         android:layout_marginTop="25dp">
                <Button
                        android:background="@drawable/ic_backbtn"
                        android:layout_width="15dp"
                        android:layout_height="20dp" android:id="@+id/back_btn"
                        tools:layout_editor_absoluteY="12dp"
                        tools:layout_editor_absoluteX="27dp"/>
                <TextView
                        android:text="@string/register"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_height="match_parent" android:id="@+id/text_register"
                        tools:layout_editor_absoluteY="24dp"
                        tools:layout_editor_absoluteX="178dp" android:textColor="@color/black"
                        android:textStyle="bold" android:textSize="17sp"/>
            </FrameLayout>


            <FrameLayout android:layout_width="345dp" android:layout_height="90dp"
                         android:layout_gravity="center" android:layout_marginTop="50dp">
                <TextView
                        android:text="@string/id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/text_id"
                        tools:layout_editor_absoluteY="79dp"
                        tools:layout_editor_absoluteX="39dp" android:layout_gravity="left|top"
                        android:textColor="@color/black" android:paddingBottom="5dp"/>
                <EditText
                        android:layout_width="255dp"
                        android:layout_height="48dp"
                        android:inputType="textPersonName"
                        android:text="@string/idText"
                        android:ems="10"
                        android:id="@+id/edit_id" tools:layout_editor_absoluteY="104dp"
                        tools:layout_editor_absoluteX="39dp"
                        android:background="@drawable/edit_text_round"
                        android:textSize="12sp" android:layout_gravity="start|center_vertical"/>
                <Button
                        android:text="@string/duplicate"
                        android:layout_width="80dp"
                        android:layout_height="38dp" android:id="@+id/id_duplication_btn"
                        tools:layout_editor_absoluteY="102dp"
                        tools:layout_editor_absoluteX="253dp" android:background="@drawable/btn_round"
                        android:layout_gravity="end|center_vertical" android:textColor="@color/white"/>
                <TextView
                        android:text="@string/invalid_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/is_valid_id"
                        tools:layout_editor_absoluteY="79dp"
                        tools:layout_editor_absoluteX="39dp"
                        android:layout_gravity="start|bottom" android:textSize="10sp"/>
            </FrameLayout>

            <LinearLayout android:layout_width="345dp" android:layout_height="wrap_content"
                          android:orientation="vertical" android:layout_marginTop="35dp"
                          android:layout_gravity="center">
                <TextView
                        android:text="@string/password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/text_pwd"
                        tools:layout_editor_absoluteY="162dp"
                        tools:layout_editor_absoluteX="40dp" android:textColor="@color/black"
                        android:paddingBottom="5dp"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/edit_pwd" tools:layout_editor_absoluteY="192dp"
                        tools:layout_editor_absoluteX="40dp"
                        android:background="@drawable/edit_text_round"
                        android:textSize="12sp"/>
                <TextView
                        android:text="@string/check_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView"
                        android:paddingTop="10dp" android:textColor="@color/black" android:paddingBottom="5dp"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/edit_pwd_check" tools:layout_editor_absoluteY="249dp"
                        tools:layout_editor_absoluteX="40dp"
                        android:background="@drawable/edit_text_round"
                        android:textSize="12sp"/>
                <TextView
                        android:text="@string/invalid_pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/is_valid_pwd"
                        tools:layout_editor_absoluteY="296dp"
                        tools:layout_editor_absoluteX="42dp" android:textSize="10sp" android:paddingTop="3dp"/>
            </LinearLayout>

            <LinearLayout android:layout_width="345dp" android:layout_height="wrap_content"
                          android:layout_marginTop="35dp" android:orientation="vertical"
                          android:layout_gravity="center">
                <TextView
                        android:text="@string/nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/text_nickname"
                        tools:layout_editor_absoluteY="347dp"
                        tools:layout_editor_absoluteX="42dp" android:textColor="@color/black"
                        android:paddingBottom="5dp"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:inputType="textPersonName"
                        android:text="@string/nicknameText"
                        android:ems="10"
                        android:id="@+id/edit_nickname" tools:layout_editor_absoluteY="372dp"
                        tools:layout_editor_absoluteX="40dp"
                        android:background="@drawable/edit_text_round"
                        android:textSize="12sp"/>
            </LinearLayout>

            <FrameLayout android:layout_width="345dp" android:layout_height="90dp"
                         android:layout_gravity="center" android:layout_marginTop="35dp">
                <TextView
                        android:text="@string/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/text_email"
                        tools:layout_editor_absoluteY="441dp"
                        tools:layout_editor_absoluteX="48dp" android:textColor="@color/black"
                        android:paddingBottom="5dp"/>
                <EditText
                        android:layout_width="255dp"
                        android:layout_height="48dp"
                        android:inputType="textPersonName"
                        android:text="@string/emailText"
                        android:ems="10"
                        android:id="@+id/edt_email" tools:layout_editor_absoluteY="475dp"
                        tools:layout_editor_absoluteX="45dp"
                        android:background="@drawable/edit_text_round"
                        android:textSize="12sp" android:layout_gravity="start|center_vertical"/>
                <Button
                        android:text="@string/duplicate"
                        android:layout_width="80dp"
                        android:layout_height="38dp" android:id="@+id/btn_duplication_email"
                        tools:layout_editor_absoluteY="472dp"
                        tools:layout_editor_absoluteX="268dp" android:background="@drawable/btn_round"
                        android:layout_gravity="end|center_vertical" android:textColor="@color/white"/>
                <TextView
                        android:text="@string/invalid_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/is_valid_email"
                        tools:layout_editor_absoluteY="79dp"
                        tools:layout_editor_absoluteX="39dp"
                        android:layout_gravity="start|bottom" android:textSize="10sp"/>
            </FrameLayout>

            <LinearLayout android:layout_width="345dp" android:layout_height="wrap_content"
                          android:layout_gravity="center" android:layout_marginTop="30dp"
                          android:layout_marginBottom="5dp">
                <TextView
                        android:text="@string/phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/txt_phone"
                        tools:layout_editor_absoluteY="558dp"
                        tools:layout_editor_absoluteX="48dp" android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout android:layout_width="345dp" android:layout_height="wrap_content"
                          android:weightSum="10" android:layout_gravity="center" android:layout_marginBottom="35dp">
                <EditText
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/edit_phone1" android:layout_weight="2.6"
                        android:background="@drawable/edit_text_round"/>
                <TextView
                        android:text="@string/hyphen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_weight="1.2"
                        android:gravity="center" android:textSize="16sp" android:textStyle="bold"/>
                <EditText
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/edit_phone2" android:layout_weight="2.6"
                        android:background="@drawable/edit_text_round"/>
                <TextView
                        android:text="@string/hyphen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView11" android:layout_weight="1.2"
                        android:gravity="center" android:textStyle="bold" android:textSize="16sp"/>
                <EditText
                        android:id="@+id/edit_phone3"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:layout_weight="2.6"
                        android:background="@drawable/edit_text_round"/>
            </LinearLayout>
            <Button
                    android:text="@string/register"
                    android:background="@drawable/btn_round"
                    android:layout_width="345dp"
                    android:layout_height="48dp" android:id="@+id/btn_submit" tools:layout_editor_absoluteY="651dp"
                    tools:layout_editor_absoluteX="165dp"
                    android:layout_marginTop="25dp" android:layout_gravity="center" android:textColor="@color/white"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>